# sqlflight

./: CLAUDE.md  Cargo.toml  GROUP_BY_JINJA_FORMATTING_REPORT.md  SPEC.md
.beads/: issues.jsonl
.claude/: ralph-loop.local.md
src/: error.rs  lib.rs  main.rs
src/ast/: mod.rs
src/cli/: mod.rs
src/formatter/: mod.rs  placeholder.rs  printer.rs  rules.rs  utils.rs
src/jinja/: extract.rs  mod.rs  reintegrate.rs
src/parser/: expr.rs  lexer.rs  mod.rs  snowflake.rs  stmt.rs
test_fixtures/: comprehensive_nasty.sql  comprehensive_nasty_supported.sql
tests/: error_tests.rs  formatting_tests.rs  jinja_tests.rs  lexer_tests.rs  parser_tests.rs  printer_tests.rs  snowflake_tests.rs
tests/integration/: cli_tests.rs  mod.rs
tests/snapshots/: mod.rs
