[package]
name = "sqlflight"
version = "0.1.0"
edition = "2024"
authors = ["John McCrary <john@ouachitalabs.com>"]
description = "A fast, opinionated SQL formatter for Snowflake with first-class Jinja support"
keywords = ["sql", "formatter", "snowflake", "jinja", "dbt"]
categories = ["command-line-utilities", "development-tools"]
license = "GPL-2.0"
repository = "https://github.com/ouachitalabs/sqlflight"
rust-version = "1.85"

[dependencies]
winnow = "0.7"
minijinja = "2"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
glob = "0.3"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

[dev-dependencies]
insta = { version = "1", features = ["glob"] }
tempfile = "3"
assert_cmd = "2"
predicates = "3"
pretty_assertions = "1"

[[bin]]
name = "sqlflight"
path = "src/main.rs"

[lib]
name = "sqlflight"
path = "src/lib.rs"
